tests/type-errors/expr_cmp_ne_option.arl
archetype expr_cmp_ne_option

entry exec () {
  effect {
    var a : option<string> = none;
    var b : option<string> = none;
    do_require (a <> b, "ko")
  }
}
